[package]
name = "session_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }